supporting-documents/acimtl/acimtl-prod-api-cloudformation-template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Stack for acimtl-prod-api - Generated from CDK
Parameters:
  BootstrapVersion:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /cdk-bootstrap/hnb659fds/version
    Description: Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]
  SsmParameterValueacimtlprodcommoninfrastructurevpcIdC96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /acimtl/prod/common-infrastructure/vpcId
  SsmParameterValueacimtlprodcommoninfrastructurepublicSubnetIdsC96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<CommaDelimitedList>
    Default: /acimtl/prod/common-infrastructure/publicSubnetIds
  SsmParameterValueacimtlprodcommoninfrastructureprivateSubnetIdsC96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<CommaDelimitedList>
    Default: /acimtl/prod/common-infrastructure/privateSubnetIds
  SsmParameterValueacimtlprodcommoninfrastructurealarmTopicArnC96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /acimtl/prod/common-infrastructure/alarmTopicArn
  SsmParameterValueacimtlprodauthuserPoolIdC96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /acimtl/prod/auth/userPoolId
  SsmParameterValueacimtlprodbucketbucketArnC96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /acimtl/prod/bucket/bucketArn
Resources:
  AutoScaledFargateServiceClusterD5473B67:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: acimtl-prod-api
    Metadata:
      aws:cdk:path: acimtl-prod-api/AutoScaledFargateService/Cluster/Resource
  AutoScaledFargateServiceTaskDefTaskRole5B8ED37F:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
        - Action: sts:AssumeRole
          Effect: Allow
          Principal:
            Service: ecs-tasks.amazonaws.com
        Version: '2012-10-17'
      ManagedPolicyArns:
      - Ref: Policy23B91518
    Metadata:
      aws:cdk:path: acimtl-prod-api/AutoScaledFargateService/TaskDef/TaskRole/Resource
  AutoScaledFargateServiceTaskDefTaskRoleDefaultPolicyB2FE3A8B:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
        - Action:
          - logs:CreateLogGroup
          - logs:CreateLogStream
          - logs:PutLogEvents
          Effect: Allow
          Resource: arn:aws:logs:ca-central-1:484907525335:log-group:acimtl-prod-api:*
        Version: '2012-10-17'
      PolicyName: AutoScaledFargateServiceTaskDefTaskRoleDefaultPolicyB2FE3A8B
      Roles:
      - Ref: AutoScaledFargateServiceTaskDefTaskRole5B8ED37F
    Metadata:
      aws:cdk:path: acimtl-prod-api/AutoScaledFargateService/TaskDef/TaskRole/DefaultPolicy/Resource
  AutoScaledFargateServiceTaskDef6AFABCA1:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
      - Essential: true
        Image: 484907525335.dkr.ecr.ca-central-1.amazonaws.com/acimtl-prod-api:latest
        LogConfiguration:
          LogDriver: awslogs
          Options:
            awslogs-group:
              Ref: AutoScaledFargateServiceTaskDefwebapiLogGroup5B7A5D8E
            awslogs-stream-prefix: ecs
            awslogs-region: ca-central-1
        Memory: 512
        Name: web-api
        PortMappings:
        - ContainerPort: 3000
          Protocol: tcp
        TaskRoleArn:
          Fn::GetAtt:
          - AutoScaledFargateServiceTaskDefTaskRole5B8ED37F
          - Arn
      Cpu: '256'
      ExecutionRoleArn:
        Fn::GetAtt:
        - AutoScaledFargateServiceTaskDefExecutionRoleE2BF0050
        - Arn
      Family: acimtl-prod-api
      Memory: '512'
      NetworkMode: awsvpc
      RequiresCompatibilities:
      - FARGATE
      TaskRoleArn:
        Fn::GetAtt:
        - AutoScaledFargateServiceTaskDefTaskRole5B8ED37F
        - Arn
    Metadata:
      aws:cdk:path: acimtl-prod-api/AutoScaledFargateService/TaskDef/Resource
  AutoScaledFargateServiceTaskDefwebapiLogGroup5B7A5D8E:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: acimtl-prod-api
      RetentionInDays: 30
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: acimtl-prod-api/AutoScaledFargateService/TaskDef/web-api/LogGroup/Resource
  AutoScaledFargateServiceTaskDefExecutionRoleE2BF0050:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
        - Action: sts:AssumeRole
          Effect: Allow
          Principal:
            Service: ecs-tasks.amazonaws.com
        Version: '2012-10-17'
    Metadata:
      aws:cdk:path: acimtl-prod-api/AutoScaledFargateService/TaskDef/ExecutionRole/Resource
  AutoScaledFargateServiceTaskDefExecutionRoleDefaultPolicy8D1C7E03:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
        - Action:
          - ecr:BatchCheckLayerAvailability
          - ecr:GetDownloadUrlForLayer
          - ecr:BatchGetImage
          Effect: Allow
          Resource: arn:aws:ecr:ca-central-1:484907525335:repository/acimtl-prod-api
        - Action: ecr:GetAuthorizationToken
          Effect: Allow
          Resource: '*'
        - Action:
          - logs:CreateLogStream
          - logs:PutLogEvents
          Effect: Allow
          Resource:
            Fn::GetAtt:
            - AutoScaledFargateServiceTaskDefwebapiLogGroup5B7A5D8E
            - Arn
        Version: '2012-10-17'
      PolicyName: AutoScaledFargateServiceTaskDefExecutionRoleDefaultPolicy8D1C7E03
      Roles:
      - Ref: AutoScaledFargateServiceTaskDefExecutionRoleE2BF0050
    Metadata:
      aws:cdk:path: acimtl-prod-api/AutoScaledFargateService/TaskDef/ExecutionRole/DefaultPolicy/Resource
  AutoScaledFargateServiceB06274D9:
    Type: AWS::ECS::Service
    Properties:
      Cluster:
        Ref: AutoScaledFargateServiceClusterD5473B67
      DeploymentConfiguration:
        MaximumPercent: 200
        MinimumHealthyPercent: 50
      DesiredCount: 2
      EnableExecuteCommand: false
      LaunchType: FARGATE
      LoadBalancers:
      - ContainerName: web-api
        ContainerPort: 3000
        TargetGroupArn:
          Ref: AutoScaledFargateServiceLBPublicListenerECSGroup6F6E7A9F
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          SecurityGroups:
          - Ref: AutoScaledFargateServiceSecurityGroup9DA6F2F3
          Subnets:
            Ref: SsmParameterValueacimtlprodcommoninfrastructureprivateSubnetIdsC96584B6F00A464EAD1953AFF4B05118Parameter
      ServiceName: acimtl-prod-api
      TaskDefinition:
        Ref: AutoScaledFargateServiceTaskDef6AFABCA1
    DependsOn:
    - AutoScaledFargateServiceLBPublicListenerECSGroup6F6E7A9F
    - AutoScaledFargateServiceLBPublicListener9B5D806E
    Metadata:
      aws:cdk:path: acimtl-prod-api/AutoScaledFargateService/Service/Resource
  AutoScaledFargateServiceSecurityGroup9DA6F2F3:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: acimtl-prod-api/AutoScaledFargateService/SecurityGroup
      SecurityGroupEgress:
      - CidrIp: 0.0.0.0/0
        Description: Allow all outbound traffic by default
        IpProtocol: '-1'
      VpcId:
        Ref: SsmParameterValueacimtlprodcommoninfrastructurevpcIdC96584B6F00A464EAD1953AFF4B05118Parameter
    Metadata:
      aws:cdk:path: acimtl-prod-api/AutoScaledFargateService/SecurityGroup/Resource
  AutoScaledFargateServiceSecurityGroupfromacimtlprodapiAutoScaledFargateServiceLBSecurityGroup6AE7CF213000D6C7D7B6:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: Load balancer to target
      FromPort: 3000
      GroupId:
        Ref: AutoScaledFargateServiceSecurityGroup9DA6F2F3
      SourceSecurityGroupId:
        Ref: AutoScaledFargateServiceLBSecurityGroup3AE23DBE
      ToPort: 3000
    Metadata:
      aws:cdk:path: acimtl-prod-api/AutoScaledFargateService/SecurityGroup/from acimtlprodapiAutoScaledFargateServiceLBSecurityGroup6AE7CF21:3000
  AutoScaledFargateServiceTaskCountTarget41B0A0C3:
    Type: AWS::ApplicationAutoScaling::ScalableTarget
    Properties:
      MaxCapacity: 4
      MinCapacity: 2
      ResourceId:
        Fn::Join:
        - ''
        - - service/
          - Ref: AutoScaledFargateServiceClusterD5473B67
          - /
          - Fn::GetAtt:
            - AutoScaledFargateServiceB06274D9
            - Name
      RoleARN:
        Fn::Join:
        - ''
        - - 'arn:'
          - Ref: AWS::Partition
          - :iam::
          - Ref: AWS::AccountId
          - :role/aws-service-role/ecs.application-autoscaling.amazonaws.com/AWSServiceRoleForApplicationAutoScaling_ECSService
      ScalableDimension: ecs:service:DesiredCount
      ServiceNamespace: ecs
    DependsOn:
    - AutoScaledFargateServiceTaskDefTaskRole5B8ED37F
    Metadata:
      aws:cdk:path: acimtl-prod-api/AutoScaledFargateService/TaskCount/Target/Resource
  AutoScaledFargateServiceTaskCountTargetcpuUtilizationscalingpolicyC8C708B4:
    Type: AWS::ApplicationAutoScaling::ScalingPolicy
    Properties:
      PolicyName: api-cpu80
      PolicyType: TargetTrackingScaling
      ScalingTargetId:
        Ref: AutoScaledFargateServiceTaskCountTarget41B0A0C3
      TargetTrackingScalingPolicyConfiguration:
        PredefinedMetricSpecification:
          PredefinedMetricType: ECSServiceAverageCPUUtilization
        TargetValue: 80
    DependsOn:
    - AutoScaledFargateServiceTaskDefTaskRole5B8ED37F
    Metadata:
      aws:cdk:path: acimtl-prod-api/AutoScaledFargateService/TaskCount/Target/cpuUtilization-scaling-policy/Resource
  AutoScaledFargateServiceTaskCountTargetmemoryUtilizationscalingpolicy65203222:
    Type: AWS::ApplicationAutoScaling::ScalingPolicy
    Properties:
      PolicyName: api-memory80
      PolicyType: TargetTrackingScaling
      ScalingTargetId:
        Ref: AutoScaledFargateServiceTaskCountTarget41B0A0C3
      TargetTrackingScalingPolicyConfiguration:
        PredefinedMetricSpecification:
          PredefinedMetricType: ECSServiceAverageMemoryUtilization
        TargetValue: 80
    DependsOn:
    - AutoScaledFargateServiceTaskDefTaskRole5B8ED37F
    Metadata:
      aws:cdk:path: acimtl-prod-api/AutoScaledFargateService/TaskCount/Target/memoryUtilization-scaling-policy/Resource
  AutoScaledFargateServiceLB7E37B37A:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      LoadBalancerAttributes:
      - Key: deletion_protection.enabled
        Value: 'false'
      Scheme: internet-facing
      SecurityGroups:
      - Ref: AutoScaledFargateServiceLBSecurityGroup3AE23DBE
      Subnets:
        Ref: SsmParameterValueacimtlprodcommoninfrastructurepublicSubnetIdsC96584B6F00A464EAD1953AFF4B05118Parameter
      Type: application
    Metadata:
      aws:cdk:path: acimtl-prod-api/AutoScaledFargateService/LB/Resource
  AutoScaledFargateServiceLBSecurityGroup3AE23DBE:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Automatically created Security Group for ELB acimtlprodapiAutoScaledFargateServiceLB6F6E7A9F
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        Description: Allow from anyone on port 80
        FromPort: 80
        IpProtocol: tcp
        ToPort: 80
      - CidrIp: 0.0.0.0/0
        Description: Allow from anyone on port 443
        FromPort: 443
        IpProtocol: tcp
        ToPort: 443
      VpcId:
        Ref: SsmParameterValueacimtlprodcommoninfrastructurevpcIdC96584B6F00A464EAD1953AFF4B05118Parameter
    Metadata:
      aws:cdk:path: acimtl-prod-api/AutoScaledFargateService/LB/SecurityGroup/Resource
  AutoScaledFargateServiceLBSecurityGrouptoacimtlprodapiAutoScaledFargateServiceSecurityGroup9DA6F2F33000A5FB5024:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId:
        Ref: AutoScaledFargateServiceLBSecurityGroup3AE23DBE
      IpProtocol: tcp
      Description: Load balancer to target
      DestinationSecurityGroupId:
        Ref: AutoScaledFargateServiceSecurityGroup9DA6F2F3
      FromPort: 3000
      ToPort: 3000
    Metadata:
      aws:cdk:path: acimtl-prod-api/AutoScaledFargateService/LB/SecurityGroup/to acimtlprodapiAutoScaledFargateServiceSecurityGroup9DA6F2F3:3000
  AutoScaledFargateServiceLBPublicListener9B5D806E:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
      - RedirectConfig:
          Port: '443'
          Protocol: HTTPS
          StatusCode: HTTP_301
        Type: redirect
      LoadBalancerArn:
        Ref: AutoScaledFargateServiceLB7E37B37A
      Port: 80
      Protocol: HTTP
    Metadata:
      aws:cdk:path: acimtl-prod-api/AutoScaledFargateService/LB/PublicListener/Resource
  AutoScaledFargateServiceLBPublicListenerECSGroup6F6E7A9F:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Port: 80
      Protocol: HTTP
      TargetGroupAttributes:
      - Key: stickiness.enabled
        Value: 'false'
      TargetType: ip
      VpcId:
        Ref: SsmParameterValueacimtlprodcommoninfrastructurevpcIdC96584B6F00A464EAD1953AFF4B05118Parameter
    Metadata:
      aws:cdk:path: acimtl-prod-api/AutoScaledFargateService/LB/PublicListener/ECSGroup/Resource
  AutoScaledFargateServiceDNSDC53C8B5:
    Type: AWS::Route53::RecordSet
    Properties:
      Name: acimtl-prod-api.ingeno.io.
      Type: A
      AliasTarget:
        DNSName:
          Fn::GetAtt:
          - AutoScaledFargateServiceLB7E37B37A
          - DNSName
        HostedZoneId:
          Fn::GetAtt:
          - AutoScaledFargateServiceLB7E37B37A
          - CanonicalHostedZoneID
      HostedZoneId: Z09494053Q6MX0K5TUV2Y
    Metadata:
      aws:cdk:path: acimtl-prod-api/AutoScaledFargateService/DNS/Resource
  AutoScaledFargateServicefargatecpuutilizationalarm9FF63A44:
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmActions:
      - Ref: SsmParameterValueacimtlprodcommoninfrastructurealarmTopicArnC96584B6F00A464EAD1953AFF4B05118Parameter
      AlarmName: acimtl-prod-api-fargate-cpu-utilization
      ComparisonOperator: GreaterThanOrEqualToThreshold
      Dimensions:
      - Name: ClusterName
        Value:
          Ref: AutoScaledFargateServiceClusterD5473B67
      - Name: ServiceName
        Value:
          Fn::GetAtt:
          - AutoScaledFargateServiceB06274D9
          - Name
      EvaluationPeriods: 2
      MetricName: CPUUtilization
      Namespace: AWS/ECS
      Period: 300
      Statistic: Average
      Threshold: 75
      TreatMissingData: breaching
    Metadata:
      aws:cdk:path: acimtl-prod-api/AutoScaledFargateService/fargate-cpu-utilization-alarm/Resource
  AutoScaledFargateServiceelberrorhttp5xx4557A755:
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmActions:
      - Ref: SsmParameterValueacimtlprodcommoninfrastructurealarmTopicArnC96584B6F00A464EAD1953AFF4B05118Parameter
      AlarmName: acimtl-prod-api-elb-http-error-5xx
      ComparisonOperator: GreaterThanOrEqualToThreshold
      Dimensions:
      - Name: LoadBalancer
        Value:
          Fn::Join:
          - ''
          - - Fn::Select:
              - 1
              - Fn::Split:
                - /
                - Ref: AutoScaledFargateServiceLBPublicListener9B5D806E
            - /
            - Fn::Select:
              - 2
              - Fn::Split:
                - /
                - Ref: AutoScaledFargateServiceLBPublicListener9B5D806E
            - /
            - Fn::Select:
              - 3
              - Fn::Split:
                - /
                - Ref: AutoScaledFargateServiceLBPublicListener9B5D806E
      - Name: TargetGroup
        Value:
          Fn::GetAtt:
          - AutoScaledFargateServiceLBPublicListenerECSGroup6F6E7A9F
          - TargetGroupFullName
      EvaluationPeriods: 2
      MetricName: HTTPCode_Target_5XX_Count
      Namespace: AWS/ApplicationELB
      Period: 300
      Statistic: Sum
      Threshold: 1
      TreatMissingData: notBreaching
    Metadata:
      aws:cdk:path: acimtl-prod-api/AutoScaledFargateService/elb-error-http-5xx/Resource
  Policy23B91518:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      Description: ''
      ManagedPolicyName: BackendPolicy
      Path: /
      PolicyDocument:
        Statement:
        - Action:
          - cognito-idp:AdminCreateUser
          - cognito-idp:AdminDeleteUser
          - cognito-idp:AdminDisableUser
          - cognito-idp:AdminEnableUser
          - cognito-idp:AdminGetUser
          - cognito-idp:AdminUpdateUserAttributes
          Effect: Allow
          Resource:
            Fn::Join:
            - ''
            - - arn:aws:cognito-idp:ca-central-1:484907525335:userpool/
              - Ref: SsmParameterValueacimtlprodauthuserPoolIdC96584B6F00A464EAD1953AFF4B05118Parameter
        - Action:
          - logs:CreateLogStream
          - logs:DescribeLogStreams
          - logs:PutLogEvents
          Effect: Allow
          Resource: arn:aws:logs:ca-central-1:484907525335:log-group:acimtl-prod-api:*
        - Action:
          - s3:DeleteObject
          - s3:GetObject
          - s3:ListBucket
          - s3:PutObject
          Condition:
            StringEqualsIfExists:
              aws:SourceVpc: acimtl-prod
          Effect: Allow
          Resource:
          - Fn::Join:
            - ''
            - - Ref: SsmParameterValueacimtlprodbucketbucketArnC96584B6F00A464EAD1953AFF4B05118Parameter
              - /*
          - Ref: SsmParameterValueacimtlprodbucketbucketArnC96584B6F00A464EAD1953AFF4B05118Parameter
        Version: '2012-10-17'
    Metadata:
      aws:cdk:path: acimtl-prod-api/Policy/Resource
Outputs:
  AutoScaledFargateServiceLoadBalancerDNSFCAB462B:
    Value:
      Fn::GetAtt:
      - AutoScaledFargateServiceLB7E37B37A
      - DNSName
  AutoScaledFargateServiceServiceURLA604D796:
    Value:
      Fn::Join:
      - ''
      - - https://
        - Ref: AutoScaledFargateServiceDNSDC53C8B5
Rules:
  CheckBootstrapVersion:
    Assertions:
    - Assert:
        Fn::Not:
        - Fn::Contains:
          - - '1'
            - '2'
            - '3'
            - '4'
            - '5'
          - Ref: BootstrapVersion
      AssertDescription: CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.
